# A-minimal-implementation-of-Shortcut-Models

./: README.md  pyproject.toml  shortcut_model.ipynb
